add old predict method
